# voidTerm

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  gradle.properties  gradlew  settings.gradle  specs.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-arm64.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/voidterm/app/: AudioDebugDialog.java  CompactPanel.java  CompactToolbar.java  DiagnosticLog.java  DownloadJobs.java  ExtraKeysConfig.java  GameBoyControlPanel.java  InterfaceTheme.java  LayoutEditMode.java  LayoutStore.java  MacroEditDialog.java  MacroExecutor.java  MacroStore.java  ModelDownloadService.java  PanelController.java  PanelUtils.java  ParakeetDownloadJob.java  ParakeetDownloadService.java  ParakeetQuantizationView.java  SessionListAdapter.java  SessionManager.java  SettingsActivity.java  SettingsDialog.java  TerminalService.java  TerminalStyleDialog.java  TermuxActivity.java  TermuxBootstrapInstaller.java  TermuxTerminalSessionClient.java  VoidTermTerminalViewClient.java  WhisperCatalogView.java  WhisperDownloadJob.java
app/src/main/java/com/voidterm/contracts/: ControlPanel.java  ControlPanelListener.java  DownloadJob.java  FileSpec.java  TranscriptionListener.java  VoiceInputCallback.java  VoiceState.java
app/src/main/java/com/voidterm/input/: GestureTiming.java  HandlerScheduler.java  KeyGestureDetector.java  QuestInputHandler.java  Scheduler.java
app/src/main/java/com/voidterm/voice/: AudioCapture.java  AudioChunker.java  AudioConfig.java  AudioFocus.java  AudioPreprocessor.java  CpuInfo.java  DeviceProfiler.java  HttpModelDownloader.java  ParakeetConfig.java  ParakeetEngine.java  ParakeetModelManager.java  ParakeetQuantization.java  ParakeetTokenizer.java  TranscriptionEngine.java  TranscriptionOverlay.java  VoiceInputManager.java  WhisperBridge.java  WhisperConfig.java  WhisperEngine.java  WhisperModelCatalog.java  WhisperModelManager.java
app/src/main/jni/: .gitignore  CMakeLists.txt  generate_vulkan_shaders.sh  voidterm_remap.c  whisper_jni.cpp
app/src/main/res/layout/: transcription_overlay.xml
app/src/main/res/values/: quest_defaults.xml  strings.xml
app/src/test/java/com/voidterm/app/: CompactPanelTest.java  DownloadJobsTest.java  ExtraKeysConfigTest.java  InterfaceThemeTest.java  MacroExecutorTest.java  MacroStoreTest.java  PanelUtilsTest.java  SessionManagerTest.java  SettingsDialogMigrationTest.java
app/src/test/java/com/voidterm/contracts/: FileSpecTest.java
app/src/test/java/com/voidterm/input/: GestureTimingTest.java  KeyGestureDetectorTest.java  QuestInputHandlerTest.java
app/src/test/java/com/voidterm/testutil/: FakeScheduler.java  FakeSchedulerTest.java  FakeSharedPreferences.java
app/src/test/java/com/voidterm/voice/: AudioChunkerTest.java  AudioConfigTest.java  AudioPreprocessorTest.java  CpuInfoTest.java  DeviceProfilerTest.java  ParakeetDedupTest.java  ParakeetModelManagerTest.java  ParakeetQuantizationTest.java  WhisperConfigTest.java  WhisperModelCatalogTest.java  WhisperModelManagerTest.java
docs/: BUILDING.md  CLAUDE_CODE_SETUP.md  QUEST_SETUP.md  VALIDATION_REPORT.md
docs/plans/: 2026-02-24-volume-keys-mapping-design.md  2026-02-24-volume-keys-mapping.md
docs/superpowers/plans/: 2026-06-01-key-gesture-shortcuts.md  2026-06-02-parakeet-quantization.md  2026-06-02-whisper-model-download.md
docs/superpowers/specs/: 2026-06-01-key-gesture-shortcuts-design.md  2026-06-02-parakeet-quantization-design.md  2026-06-02-whisper-model-download-design.md
plans/: CODE_REVIEW.md  IMPLEMENTATION_PLAN.md  agent-build.md  agent-integration.md  agent-ui.md  agent-voice.md  agent-whisper.md
plans/completed/: phase-1-fixes-critiques.md  phase-2-consolidation-config.md  phase-3-ui-robustness.md  phase-5-interface-commune-panels.md
terminal-emulator/: build.gradle
terminal-emulator/src/main/jni/: termux.c
terminal-view/: build.gradle
terminal-view/src/main/java/com/termux/view/: TerminalView.java  TerminalViewClient.java
terminal-view/src/main/java/com/termux/view/textselection/: TextSelectionCursorController.java
termux-shared/: build.gradle
